@startuml

title __VIEW's Class Diagram__\n

  namespace com.view {
    class com.view.Connexion {
        - globalPanel : JPanel
        - mailField : JTextField
        - mdpField : JPasswordField
        - mdpForgot : JLabel
        - seConnecterButton : JButton
        - signUp : JLabel
        + Connexion()
        + getMailField()
        + getMdpField()
        + getMdpForgot()
        + getSeConnecterButton()
        + getSignUp()
        + open()
    }
  }
  

  namespace com.view {
    class com.view.ForgotPassword {
        - forgotButton : JButton
        - globalPanel : JPanel
        - mailField : JTextField
        + ForgotPassword()
        + getForgotButton()
        + getMailField()
        + open()
    }
  }
  

  namespace com.view {
    class com.view.Main {
        {static} + main()
    }
  }
  

  namespace com.view {
    class com.view.MainView {
        - addReservation : JButton
        - boxHeureDebut : JComboBox<String>
        - boxHeureFin : JComboBox<String>
        - boxJourDebut : JComboBox<String>
        - boxJourFin : JComboBox<String>
        - boxSalle : JComboBox<String>
        - deleteReservation : JButton
        - globalPanel : JPanel
        - listSalle : JList<String>
        - reservationBox : JComboBox<Reservation>
        - tableReservations : JTable
        + MainView()
        + getAddReservation()
        + getBoxHeureDebut()
        + getBoxHeureFin()
        + getBoxJourDebut()
        + getBoxJourFin()
        + getBoxSalle()
        + getDeleteReservation()
        + getListSalle()
        + getReservationBox()
        + getTableReservations()
        + open()
    }
  }
  

  namespace com.view {
    class com.view.SignUp {
        - globalPanel : JPanel
        - mailField : JTextField
        - mdpField : JPasswordField
        - nomField : JTextField
        - prenomField : JTextField
        - signupButton : JButton
        + SignUp()
        + getMailField()
        + getMdpField()
        + getNomField()
        + getPrenomField()
        + getSignupButton()
        + open()
    }
  }
  

  com.view.Connexion -up-|> javax.swing.JFrame
  com.view.ForgotPassword -up-|> javax.swing.JFrame
  com.view.MainView -up-|> javax.swing.JFrame
  com.view.SignUp -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
